shop-online/backend-deployment&svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: shop-online
  annotations:
    # annotations for keel to update the image
    keel.sh/policy: "all"
    keel.sh/trigger: "poll"
    keel.sh/pollSchedule: "@every 3m"
spec:
  selector:
    matchLabels:
      app: backend-lab4
  template:
    metadata:
      labels:
        app: backend-lab4
    spec:
      containers:
      - name: lab4-backend
        image: shlomobarzili/flask-backend:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 5050
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: lab4-backend-svc
  namespace: shop-online # the namespace that sperate the pods between envroments.
spec:
  selector:
    app: backend-lab4
  type: LoadBalancer # the type of the service
  loadBalancerIP: "172.18.0.146"
  ports:
    - protocol: TCP
      port: 5050   # the port svc that expose
      targetPort: 5050 # the port of the pod | container
