shop-online/db-deploment&svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: shop-online
  labels:
    app: mongodb-lab4
spec:
  selector:
    matchLabels:
      app: mongodb-lab4
  template:
    metadata:
      labels:
        app: mongodb-lab4
    spec:
      containers:
      - name: mongodb
        image: shlomobarzili/mongodb:latest
        ports:
        - containerPort: 27017

        volumeMounts:
        - name: mongodb-storage
          mountPath: /data/db # default path should be /data/db its for mongodb
      volumes:
        - name: mongodb-storage
          persistentVolumeClaim:
            claimName: mongodb-pvc  

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: shop-online
spec:
  selector:
    app: mongodb-lab4
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
