shop-online/fronted-deployment&svc.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-fronted  # react-front
  namespace: shop-online
  annotations:
    # annotations for keel to update the image
    keel.sh/policy: "all"
    keel.sh/trigger: "poll"
    keel.sh/pollSchedule: "@every 3m"
spec:
  selector:
    matchLabels:
      app: react-app
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
      - name: lab4
        image: shlomobarzili/react-fronted:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 3000
          protocol: TCP

        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            cpu: 500m
            memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: react-svc
  namespace: shop-online # the namespace that sperate the pods between envroments.
spec:
  selector:
    app: react-app
  type: LoadBalancer # the type of the service
  ports:
    - protocol: TCP
      port: 3000   # the port svc that expose
      targetPort: 3000 # the port of the pod
      loadBalancerIP: 172.18.0.145
